# playdate-template-c

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
Source/: pdxinfo
Source/images/: .gitkeep
Source/sounds/: .gitkeep
cmake/: bump_version.cmake  package_release.cmake
scripts/: convert_audio.sh  normalize_audio.sh
src/: main.c
